--- a/build.properties
+++ b/build.properties
@@ -10,3 +10,4 @@ bin.includes = plugin.xml,\
                bin/,\
                build.properties,\
                src/
+jars.extra.classpath = lib/mathsat.jar
