--- a/default.properties
+++ b/default.properties
@@ -38,7 +38,7 @@ analysis.bfs = false
 analysis.programs = /home/erkan/cpa/runtime-config/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpaplugin.cpa.cpas.location.LocationCPA, cpaplugin.cpa.cpas.predicateabstraction.PredicateAbstractionCPA
+analysis.cpas = cpaplugin.cpa.cpas.location.LocationCPA, cpaplugin.cpa.cpas.defuse.DefUseCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
