git-svn-id: https://svn.sosy-lab.org/software/cpachecker@28 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/default.properties
+++ b/default.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = /media/sda7/cpa/CPALog.txt
+log.path = /localhome/erkan/cpa/logs/cpaLog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = on
@@ -11,10 +11,10 @@ analysis.saveStatistics = true
 dot.export = true
 
 # where to save the dot file
-dot.path = /home/erkan/cpa/
+dot.path = /localhome/erkan/cpa/graphs/
 
 # do we want to simplify cfa?
-cfa.simplify = true
+cfa.simplify = false
 
 # do we want to combine multiple assignments and 
 # if cpa.simplify is set to true and cfa.combineBlockStatements is set
@@ -23,14 +23,13 @@ cfa.simplify = true
 cfa.combineBlockStatements = false
 
 # do we want to throw declarations away? 
-
 cfa.removeDeclarations = false
 
 # set to true if you want to run an interprocedural analysis
 analysis.interprocedural = true
 
 # where are predicates
-predicates.path = /home/erkan/cpa/
+predicates.path = /localhome/erkan/cpa/predicates/
 
 # entry function
 analysis.entryFunction = main
@@ -42,10 +41,10 @@ analysis.bfs = false
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-analysis.programs = /home/erkan/cpa/runtime-config/
+analysis.programs = /localhome/erkan/cpa/tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpaplugin.cpa.cpas.location.LocationCPA, cpaplugin.cpa.cpas.octagon.OctagonCPA
+analysis.cpas = cpaplugin.cpa.cpas.location.LocationCPA,cpaplugin.cpa.cpas.defuse.DefUseCPA
 #predicateabstraction.PredicateAbstractionCPA
 #defuse.DefUseCPA
 #octagon.OctagonCPA
