started implementing symbpred as a proper cpa code is pretty unstable right now
git-svn-id: https://svn.sosy-lab.org/software/cpachecker@73 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/default.properties
+++ b/default.properties
@@ -44,7 +44,7 @@ analysis.bfs = false
 analysis.programs = /localhome/erkan/cpa/tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpaplugin.cpa.cpas.location.LocationCPA,cpaplugin.cpa.cpas.defuse.DefUseCPA
+analysis.cpas = cpaplugin.cpa.cpas.location.LocationCPA,cpaplugin.cpa.cpas.predicateabstraction.PredicateAbstractionCPA
 #predicateabstraction.PredicateAbstractionCPA
 #defuse.DefUseCPA
 #octagon.OctagonCPA
