--- a/build.properties
+++ b/build.properties
@@ -1,17 +1,20 @@
-source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .,\
                icons/,\
                .classpath,\
                .project,\
                Thumbs.db,\
-               bin/,\
                build.properties,\
                src/,\
-               lib/mathsat.jar,\
                nativeLibs/,\
-               lib/minijdd_103.jar
+               lib/javabdd-1.0b2.jar,\
+               lib/mathsat.jar,\
+               lib/minijdd_103.jar,\
+               bin/,\
+               doc/,\
+               lib/
 jars.extra.classpath = lib/mathsat.jar,\
-                       lib/minijdd_103.jar
+                       lib/minijdd_103.jar,\
+                       lib/javabdd-1.0b2.jar,\
+                       lib/yicesapijava.jar
