--- a/default.properties
+++ b/default.properties
@@ -33,7 +33,10 @@ predicates.path = /localhome/erkan/cpa/predicates/
 
 # entry function
 analysis.entryFunction = main
-    
+
+# do we use topological sort to get the next element?
+analysis.topSort = true
+   
 # which strategy to adopt for visiting states? DFS or BFS? BFS, unless
 # bfs is false
 analysis.bfs = false
@@ -44,14 +47,14 @@ analysis.bfs = false
 analysis.programs = /localhome/erkan/cpa/tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpaplugin.cpa.cpas.location.LocationCPA,cpaplugin.cpa.cpas.predicateabstraction.PredicateAbstractionCPA
+analysis.cpas = cpaplugin.cpa.cpas.location.LocationCPA,cpaplugin.cpa.cpas.defuse.DefUseCPA
 #predicateabstraction.PredicateAbstractionCPA
 #defuse.DefUseCPA
 #octagon.OctagonCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep
+analysis.mergeOperators = sep, join
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
