-Added plugin config file to preferences (window->preferences) -Added various checks to ensure correct file is loaded -Loads config file each run instead of caching log data -Other small bug fixes
git-svn-id: https://svn.sosy-lab.org/software/cpachecker@86 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/plugin.xml
+++ b/plugin.xml
@@ -26,5 +26,19 @@
          </action>
       </actionSet>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            name="CPAPlugin"
+            class="cpaplugin.preferences.CPAPreferencePage"
+            id="cpaplugin.preferences.CPAPreferencePage">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="cpaplugin.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
 
 </plugin>
