--- a/propertyfilesforvariousanalyses/summary.properties
+++ b/propertyfilesforvariousanalyses/summary.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = /localhome/erkan/cpa/logs/CPALog.txt
+log.path = /home/erkan/cpa/logs/CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = 490
@@ -8,7 +8,7 @@ log.level = 490
 dot.export = true
 
 # where to save the dot file
-dot.path = /localhome/erkan/cpa/graphs/
+dot.path = /home/erkan/cpa/graphs/
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -24,7 +24,7 @@ analysis.interprocedural = true
 analysis.useSummaryLocations = true
 
 # where are predicates
-predicates.path = /localhome/erkan/cpa/predicates/
+predicates.path = /home/erkan/cpa/predicates/
 
 # entry function
 analysis.entryFunction = main
@@ -36,7 +36,7 @@ analysis.bfs = false
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-analysis.programs = /localhome/erkan/cpa/tests/
+analysis.programs = /home/erkan/cpa/tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
 analysis.cpas = cpaplugin.cpa.cpas.symbpredabs.summary.SummaryCPA
@@ -80,7 +80,7 @@ cpas.symbpredabs.mathsat.useIntegers = true
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath =  /localhome/erkan/cpa/cex.msat
+cpas.symbpredabs.refinement.msatCexPath =  /home/erkan/cpa/cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -97,7 +97,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = /localhome/erkan/cpa/predmap.txt
+cpas.symbpredabs.refinement.finalPredMapPath = /home/erkan/cpa/predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = true
