Removed duplicated library imports.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@160 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.properties
+++ b/build.properties
@@ -14,7 +14,4 @@ bin.includes = plugin.xml,\
                bin/,\
                doc/,\
                lib/
-jars.extra.classpath = lib/mathsat.jar,\
-                       lib/minijdd_103.jar,\
-                       lib/javabdd-1.0b2.jar,\
-                       lib/yicesapijava.jar
+jars.extra.classpath = lib/yicesapijava.jar
