added yices to classpath
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@162 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/mathsat.jar"/>
 	<classpathentry kind="lib" path="lib/minijdd_103.jar"/>
 	<classpathentry kind="lib" path="lib/javabdd-1.0b2.jar"/>
+	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
