Key removed from .project
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@185 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>CPAchecker</name>
-	<comment>@key 32303037303632392D3130303020435041506C7567696E2F65726B616E </comment>
+	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
