Added init script processing in CPAMain in order to be able to load CPAs other than CompositeCPA. These scripts are written in Groovy.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/holzer@189 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,7 @@
 	<classpathentry kind="lib" path="lib/minijdd_103.jar"/>
 	<classpathentry kind="lib" path="lib/javabdd-1.0b2.jar"/>
 	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
+	<classpathentry kind="lib" path="lib/groovy-engine.jar"/>
+	<classpathentry kind="lib" path="lib/groovy-all-1.5.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
