--- a/test/albertos_tests/config/summary_cex_suffix.properties
+++ b/test/albertos_tests/config/summary_cex_suffix.properties
@@ -45,7 +45,7 @@ analysis.bfs = false
 #analysis.programs = /home/alb/mathsat/cpachecker/eclipse_workspace/CPAPlugin/lib
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpaplugin.cpa.cpas.symbpredabs.summary.SummaryCPA
+analysis.cpas = cpa.symbpredabs.summary.SummaryCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
