Removed foo property files and added main functions in basic examples.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@387 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/query-driven-program-testing/config/testgoal002_foo.properties
+++ b/test/query-driven-program-testing/config/testgoal002_foo.properties
@@ -44,7 +44,7 @@ cfa.removeIrrelevantForErrorLocations = false
 #predicates.path = /home/alb/mathsat/cpachecker/project
 
 # entry function
-analysis.entryFunction =foo
+analysis.entryFunction =main
     
 # which strategy to adopt for visiting states? DFS or BFS? BFS, unless
 # bfs is false
