--- a/test/albertos_tests/config/summary.properties
+++ b/test/albertos_tests/config/summary.properties
@@ -13,6 +13,9 @@ dot.path = .
 # do we want to simplify cfa?
 cfa.simplify = false
 
+# run consistency checks on the cfa?
+cfa.check = true
+
 # do we want to combine multiple assignments and 
 # if cpa.simplify is set to true and cfa.combineBlockStatements is set
 # to false only blank edges will be removed while simplfying
