Added flag analysis.useFunctionDeclarations and added check to skip continue in case the flag is set to true.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@401 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/query-driven-program-testing/config/testgoal002.properties
+++ b/test/query-driven-program-testing/config/testgoal002.properties
@@ -1,4 +1,5 @@
 # enable test goal analysis
+analysis.useFunctionDeclarations = true
 analysis.queryDrivenProgramTesting=true
 testing.scoperestrictionautomaton=001
 testing.testgoalautomaton=002
