--- a/test/cilSimplifiedTests/explicitAndPredAbs.properties
+++ b/test/cilSimplifiedTests/explicitAndPredAbs.properties
@@ -5,7 +5,7 @@ log.path = /home/erkan/cpa/logs/CPALog.txt
 log.level = off
 
 # do we want to print cfa as .dot, true or false
-dot.export = true
+dot.export = false
 
 # where to save the dot file
 dot.path = /home/erkan/cpa/graphs/
@@ -37,7 +37,7 @@ analysis.noExternalCalls = true
 analysis.noCompositeCPA = false
 
 # where are predicates
-#predicates.path = /home/erkan/cpa/predicates/
+#predicates.path = /home/alb/mathsat/cpachecker/project
 
 # entry function
 analysis.entryFunction = main
@@ -50,21 +50,21 @@ analysis.bfs = false
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-#analysis.programs = /home/erkan/cpa/tests/
+#analysis.programs = /home/alb/mathsat/cpachecker/eclipse_workspace/CPAPlugin/lib
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.symbpredabs.explicit.ExplicitCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep
+analysis.mergeOperators = sep, sep, sep
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep
+analysis.stopOperators = sep, sep, sep
 
 # if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = false
+analysis.dontPrintReachableStates = true
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
@@ -77,9 +77,6 @@ cpa.useSpecializedReachedSet = true
 # some custom options for Symbolic Predicate Abstraction with Summaries
 #------------------------------------------------------------------------------
 
-# if true, cache queries to mathsat as much as possible
-cpas.symbpredabs.mathsat.useCache = false
-
 # if true, refinement will add all discovered predicates to all the locations
 # in the abstract trace
 cpas.symbpredabs.refinement.addPredicatesGlobally = false
@@ -89,7 +86,7 @@ cpas.symbpredabs.refinement.addPredicatesGlobally = false
 # computing interpolants we still use the LA solver, but encoding variables
 # as ints might still be a good idea: we can tighten strict inequalities, and
 # split negated equalities
-cpas.symbpredabs.mathsat.useIntegers = true
+cpas.symbpredabs.mathsat.useIntegers = false
 
 # if true, refinement will try to build "well-scoped" predicates, by cutting
 # spurious traces as explained in Section 5.2 of the paper "Abstractions From
@@ -97,7 +94,7 @@ cpas.symbpredabs.mathsat.useIntegers = true
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath =  /home/erkan/cpa/cex.msat
+cpas.symbpredabs.refinement.msatCexPath = /home/erkan/cpa/cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -117,25 +114,43 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 cpas.symbpredabs.refinement.finalPredMapPath = /home/erkan/cpa/predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
-cpas.symbpredabs.abstraction.cartesian = false
+cpas.symbpredabs.abstraction.cartesian = true
 
-# if true, limit the size of summary locations
 cpas.symbpredabs.smallSummaries = false
 
-# if true, use incremental search in counterexample analysis, to find the
-# minimal infeasible prefix
-cpas.symbpredabs.shortestCexTrace = false
+cpas.symbpredabs.shortestCexTrace = true
+cpas.symbpredabs.shortestCexTraceUseSuffix = true
 
-# if true, don't use abstraction refinement, but read predicates from the map
-# specified below
-cpas.symbpredabs.abstraction.norefinement = true
+#cpas.symbpredabs.abstraction.norefinement = true
+# if set, will be used to initialize the predicate map
+#cpas.symbpredabs.abstraction.fixedPredMap = /home/alb/mathsat/cpachecker/fixedpredmap.msat
+#cpas.symbpredabs.abstraction.fixedPredMap = /home/alb/mathsat/cpachecker/blast_predmap.msat
 
-# when not using refinement, where to get the list of predicates from
-cpas.symbpredabs.abstraction.fixedPredMap = /home/erkan/cpa/predicates/fixedpredmap.msat
+cpas.symbpredabs.refinement.splitItpAtoms = false
 
-# if true, split arithmetic equalities when extracting predicates from
-# interpolants
-cpas.symbpredabs.refinement.splitItpAtoms = true
+cpas.symbpredabs.mathsat.useCache = true
 
-# if true, dump the abstraction formulas in both .msat and .smv formats
-cpas.symbpredabs.mathsat.dumpHardAbstractionQueries = false
+# which SMT solver to use for computing the cartesian abstraction
+#cpas.symbpredabs.explicit.abstraction.solver = mathsat
+#cpas.symbpredabs.explicit.abstraction.solver = yices
+cpas.symbpredabs.explicit.abstraction.solver = simplify
+
+# if true, mimick the behaviour of Blast on refinement: collect all the
+# predicates from all the cuts of the abstract counterexample, and add all of
+# them to all relevant locations
+cpas.symbpredabs.refinement.useBlastWay = true
+
+# if true, apply deletion-filter to the abstract counterexample, to get a
+# minimal set of blocks, before applying interpolation-based refinement
+cpas.symbpredabs.explicit.getUsefulBlocks = true
+
+# if true, collect and print detailed statistics (at the moment, only the
+# number of abstraction steps for each location)
+#cpas.symbpredabs.explicit.extendedStats = true
+
+# if true, use incrementality in computing Cartesian abstraction
+#cpas.symbpredabs.mathsat.incremental = true
+
+# if false, don't use a combination of theories (this is incomplete)
+cpas.symbpredabs.mathsat.useDtc = true
+
