--- a/test/cilSimplifiedTests/summaryCPA.properties
+++ b/test/cilSimplifiedTests/summaryCPA.properties
@@ -22,12 +22,11 @@ cfa.check = true
 
 cfa.combineBlockStatements = false
 
+# use global variables?
+analysis.useGlobalVars = true
+
 # set to true if you want to run an interprocedural analysis
 analysis.interprocedural = true
-analysis.useSummaryLocations = false
-analysis.useGlobalVars = true
-# true if we want to use block edges
-analysis.useBlockEdges = false
 analysis.useSummaryLocations = false
 
 # if true, don't create call/return edges for external function calls
@@ -44,16 +43,16 @@ analysis.entryFunction = main
     
 # which strategy to adopt for visiting states? DFS or BFS? BFS, unless
 # bfs is false
-analysis.topSort = false
+analysis.topSort = true
 analysis.bfs = false
 
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-#analysis.programs = /home/erkan/cpa/tests/
+#analysis.programs = /home/erkan/cpa/tests/Test
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.symbpredabsCPA.SymbPredAbsCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
@@ -64,7 +63,7 @@ analysis.mergeOperators = sep, sep
 analysis.stopOperators = sep, sep
 
 # if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = false
+analysis.dontPrintReachableStates = true
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
@@ -78,7 +77,7 @@ cpa.useSpecializedReachedSet = true
 #------------------------------------------------------------------------------
 
 # if true, cache queries to mathsat as much as possible
-cpas.symbpredabs.mathsat.useCache = false
+cpas.symbpredabs.mathsat.useCache = true
 
 # if true, refinement will add all discovered predicates to all the locations
 # in the abstract trace
@@ -89,7 +88,7 @@ cpas.symbpredabs.refinement.addPredicatesGlobally = false
 # computing interpolants we still use the LA solver, but encoding variables
 # as ints might still be a good idea: we can tighten strict inequalities, and
 # split negated equalities
-cpas.symbpredabs.mathsat.useIntegers = true
+cpas.symbpredabs.mathsat.useIntegers = false
 
 # if true, refinement will try to build "well-scoped" predicates, by cutting
 # spurious traces as explained in Section 5.2 of the paper "Abstractions From
@@ -97,7 +96,7 @@ cpas.symbpredabs.mathsat.useIntegers = true
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath =  /home/erkan/cpa/cex.msat
+cpas.symbpredabs.refinement.msatCexPath = /home/erkan/cpa/cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -128,14 +127,17 @@ cpas.symbpredabs.shortestCexTrace = false
 
 # if true, don't use abstraction refinement, but read predicates from the map
 # specified below
-cpas.symbpredabs.abstraction.norefinement = true
+cpas.symbpredabs.abstraction.norefinement = false
 
 # when not using refinement, where to get the list of predicates from
-cpas.symbpredabs.abstraction.fixedPredMap = /home/erkan/cpa/predicates/fixedpredmap.msat
+#cpas.symbpredabs.abstraction.fixedPredMap = /home/erkan/cpa/predicates/fixedpredmap.msat
 
 # if true, split arithmetic equalities when extracting predicates from
 # interpolants
-cpas.symbpredabs.refinement.splitItpAtoms = true
+cpas.symbpredabs.refinement.splitItpAtoms = false
 
 # if true, dump the abstraction formulas in both .msat and .smv formats
 cpas.symbpredabs.mathsat.dumpHardAbstractionQueries = false
+
+# if false, don't use a combination of theories (this is incomplete)
+cpas.symbpredabs.mathsat.useDtc = false
