added some examples to be handled by exp. analysis
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@472 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/cilSimplifiedTests/explicitAnalysis.properties
+++ b/test/cilSimplifiedTests/explicitAnalysis.properties
@@ -5,7 +5,7 @@ log.path = /home/erkan/cpa/logs/CPALog.txt
 log.level = off
 
 # do we want to print cfa as .dot, true or false
-dot.export = true
+dot.export = false
 
 # where to save the dot file
 dot.path = /home/erkan/cpa/graphs/
@@ -64,7 +64,7 @@ analysis.mergeOperators = sep, sep
 analysis.stopOperators = sep, sep
 
 # if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = false
+analysis.dontPrintReachableStates = true
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
@@ -72,6 +72,8 @@ cfa.removeIrrelevantForErrorLocations = true
 
 # use location mapped reached set
 cpa.useSpecializedReachedSet = true
+
+explicitAnalysis.threshold = 300
 
 #------------------------------------------------------------------------------
 # some custom options for Symbolic Predicate Abstraction with Summaries
