--- a/test/cilSimplifiedTests/explicitAndPredAbs.properties
+++ b/test/cilSimplifiedTests/explicitAndPredAbs.properties
@@ -73,6 +73,8 @@ cfa.removeIrrelevantForErrorLocations = true
 # use location mapped reached set
 cpa.useSpecializedReachedSet = true
 
+explicitAnalysis.threshold = 2
+
 #------------------------------------------------------------------------------
 # some custom options for Symbolic Predicate Abstraction with Summaries
 #------------------------------------------------------------------------------
