check the bug that can be reproduced when threshold = 3 on /kbfiltr_simpl2_BUG.cil.c
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@473 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/cilSimplifiedTests/config/explicitAndPredAbs3.properties
+++ b/test/cilSimplifiedTests/config/explicitAndPredAbs3.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = /home/erkan/cpa/logs/CPALog.txt
+log.path = /localhome/erkan/cpa/logs/CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = off
@@ -8,7 +8,7 @@ log.level = off
 dot.export = false
 
 # where to save the dot file
-dot.path = /home/erkan/cpa/graphs/
+dot.path = /localhome/erkan/cpa/graphs/
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -73,7 +73,7 @@ cfa.removeIrrelevantForErrorLocations = true
 # use location mapped reached set
 cpa.useSpecializedReachedSet = true
 
-explicitAnalysis.threshold = 2
+explicitAnalysis.threshold = 3
 
 #------------------------------------------------------------------------------
 # some custom options for Symbolic Predicate Abstraction with Summaries
@@ -96,7 +96,7 @@ cpas.symbpredabs.mathsat.useIntegers = false
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath = /home/erkan/cpa/cex.msat
+cpas.symbpredabs.refinement.msatCexPath = /localhome/erkan/cpa/cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -113,7 +113,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = /home/erkan/cpa/predmap.txt
+cpas.symbpredabs.refinement.finalPredMapPath = /localhome/erkan/cpa/predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = true
