fixed bugs on explicit analysis
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@474 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/cilSimplifiedTests/config/explicitAnalysisInf.properties
+++ b/test/cilSimplifiedTests/config/explicitAnalysisInf.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = /localhome/erkan/cpa/logs/CPALog.txt
+log.path = /home/erkan/cpa/logs/CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = off
@@ -8,7 +8,7 @@ log.level = off
 dot.export = false
 
 # where to save the dot file
-dot.path = /localhome/erkan/cpa/graphs/
+dot.path = /home/erkan/cpa/graphs/
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -37,7 +37,7 @@ analysis.noExternalCalls = true
 analysis.noCompositeCPA = false
 
 # where are predicates
-#predicates.path = /localhome/erkan/cpa/predicates/
+#predicates.path = /home/erkan/cpa/predicates/
 
 # entry function
 analysis.entryFunction = main
@@ -50,7 +50,7 @@ analysis.bfs = false
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-#analysis.programs = /localhome/erkan/cpa/tests/
+#analysis.programs = /home/erkan/cpa/tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
 analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA
@@ -73,7 +73,7 @@ cfa.removeIrrelevantForErrorLocations = true
 # use location mapped reached set
 cpa.useSpecializedReachedSet = true
 
-explicitAnalysis.threshold = 5
+explicitAnalysis.threshold = 2000
 
 #------------------------------------------------------------------------------
 # some custom options for Symbolic Predicate Abstraction with Summaries
@@ -96,7 +96,7 @@ cpas.symbpredabs.mathsat.useIntegers = false
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath = /localhome/erkan/cpa/cex.msat
+cpas.symbpredabs.refinement.msatCexPath = /home/erkan/cpa/cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -113,7 +113,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = /localhome/erkan/cpa/predmap.txt
+cpas.symbpredabs.refinement.finalPredMapPath = /home/erkan/cpa/predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = true
