--- a/test/cilSimplifiedTests/config/explicitAnalysis3.properties
+++ b/test/cilSimplifiedTests/config/explicitAnalysis3.properties
@@ -37,7 +37,7 @@ analysis.noExternalCalls = true
 analysis.noCompositeCPA = false
 
 # where are predicates
-#predicates.path = /home/alb/mathsat/cpachecker/project
+#predicates.path = /home/erkan/cpa/predicates/
 
 # entry function
 analysis.entryFunction = main
@@ -50,10 +50,10 @@ analysis.bfs = false
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-#analysis.programs = /home/alb/mathsat/cpachecker/eclipse_workspace/CPAPlugin/lib
+#analysis.programs = /home/erkan/cpa/tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpa.location.LocationCPA, cpa.symbpredabs.explicit.ExplicitCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
@@ -73,7 +73,7 @@ cfa.removeIrrelevantForErrorLocations = true
 # use location mapped reached set
 cpa.useSpecializedReachedSet = true
 
-explicitAnalysis.threshold = 5
+explicitAnalysis.threshold = 3
 
 #------------------------------------------------------------------------------
 # some custom options for Symbolic Predicate Abstraction with Summaries
