--- a/test/cilSimplifiedTests/config/summaryCPA.properties
+++ b/test/cilSimplifiedTests/config/summaryCPA.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = /localhome/erkan/cpa/logs/CPALog.txt
+log.path = /home/erkan/cpa/logs/CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = off
@@ -8,7 +8,7 @@ log.level = off
 dot.export = true
 
 # where to save the dot file
-dot.path = /localhome/erkan/cpa/graphs/
+dot.path = /home/erkan/cpa/graphs/
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -36,7 +36,7 @@ analysis.noExternalCalls = true
 analysis.noCompositeCPA = false
 
 # where are predicates
-#predicates.path = /localhome/erkan/cpa/predicates/
+#predicates.path = /home/erkan/cpa/predicates/
 
 # entry function
 analysis.entryFunction = main
@@ -49,7 +49,7 @@ analysis.bfs = false
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-#analysis.programs = /localhome/erkan/cpa/tests/Test
+#analysis.programs = /home/erkan/cpa/tests/Test
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
 analysis.cpas = cpa.location.LocationCPA, cpa.symbpredabsCPA.SymbPredAbsCPA
@@ -96,7 +96,7 @@ cpas.symbpredabs.mathsat.useIntegers = false
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath = /localhome/erkan/cpa/cex.msat
+cpas.symbpredabs.refinement.msatCexPath = /home/erkan/cpa/cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -113,7 +113,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = /localhome/erkan/cpa/predmap.txt
+cpas.symbpredabs.refinement.finalPredMapPath = /home/erkan/cpa/predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = false
@@ -130,7 +130,7 @@ cpas.symbpredabs.shortestCexTrace = false
 cpas.symbpredabs.abstraction.norefinement = false
 
 # when not using refinement, where to get the list of predicates from
-#cpas.symbpredabs.abstraction.fixedPredMap = /localhome/erkan/cpa/predicates/fixedpredmap.msat
+#cpas.symbpredabs.abstraction.fixedPredMap = /home/erkan/cpa/predicates/fixedpredmap.msat
 
 # if true, split arithmetic equalities when extracting predicates from
 # interpolants
