--- a/build.xml
+++ b/build.xml
@@ -12,16 +12,12 @@
     <path id="org.eclipse.pde.core.requiredPlugins.libraryclasspath"/>
     <path id="CPAchecker.classpath">
         <pathelement location="bin"/>
-        <pathelement location="META-INF/"/>
-        <pathelement location="nativeLibs/"/>
-        <pathelement location="bin/"/>
         <path refid="org.eclipse.pde.core.requiredPlugins.libraryclasspath"/>
         <pathelement location="lib/mathsat.jar"/>
-        <pathelement location="lib/minijdd_103.jar"/>
         <pathelement location="lib/javabdd-1.0b2.jar"/>
         <pathelement location="lib/yicesapijava.jar"/>
-        <!-- Your eclipse plugin directory -->
-        <!--<fileset dir="/Users/michael/Desktop/eclipse/plugins" includes="*.jar"/>-->
+        <!-- Your eclipse plugin directory: do export ECLIPSE_HOME=<where eclipse is> -->
+        <fileset dir="${env.ECLIPSE_HOME}/plugins" includes="*.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
