Cleanup of plugin properties
- For some reason my eclipse installation finally checks those files
- Removed (some) stuff remaining after the directory cleanups

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@597 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.properties
+++ b/build.properties
@@ -4,10 +4,8 @@ bin.includes = plugin.xml,\
                .classpath,\
                .project,\
                build.properties,\
-               src/,\
-               nativeLibs/,\
                lib/javabdd-1.0b2.jar,\
                lib/mathsat.jar,\
-               lib/minijdd_103.jar,\
                bin/,\
                lib/
+source.. = src/
