Cleanup of plugin control files
- rebuilt minimal MANIFEST.MF
- fixed warning about build.properties missing . in bin.includes
- we really don't have nativeLibs anymore, defaulting to lib/native/x86-linux

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@604 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.properties
+++ b/build.properties
@@ -7,5 +7,6 @@ bin.includes = plugin.xml,\
                lib/javabdd-1.0b2.jar,\
                lib/mathsat.jar,\
                bin/,\
-               lib/
+               lib/,\
+               .
 source.. = src/
