Added flag for use of optimized reached set datastructure.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@624 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/benchmarks-qdpt/config/basicblock.properties
+++ b/test/benchmarks-qdpt/config/basicblock.properties
@@ -3,6 +3,7 @@ analysis.useFunctionDeclarations = true
 analysis.queryDrivenProgramTesting=true
 testing.scoperestrictionautomaton=001
 testing.testgoalautomaton=003
+cpa.useSpecializedReachedSet=true
 
 # where to save the log file
 log.path = CPALog.txt
