cillyfy: script that defines the flags with which sources have to be preprocessed for query driven program testing.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/qdpt-hacking@630 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/query-driven-program-testing/config/basicblock2.properties
+++ b/test/query-driven-program-testing/config/basicblock2.properties
@@ -3,6 +3,7 @@ analysis.useFunctionDeclarations=true
 analysis.summaryBasedQueryDrivenProgramTesting=true
 testing.scoperestrictionautomaton=001
 testing.testgoalautomaton=003
+art.visualize=true
 
 # where to save the log file
 log.path = CPALog.txt
@@ -126,7 +127,21 @@ cpas.symbpredabs.smallSummaries = false
 
 # if true, use incremental search in counterexample analysis, to find the
 # minimal infeasible prefix
+#cpas.symbpredabs.shortestCexTrace = false
 cpas.symbpredabs.shortestCexTrace = false
+cpas.symbpredabs.shortestCexTraceUseSuffix = false
+
+cpas.symbpredabs.refinement.splitItpAtoms = false
+
+# which SMT solver to use for computing the cartesian abstraction
+#cpas.symbpredabs.explicit.abstraction.solver = mathsat
+#cpas.symbpredabs.explicit.abstraction.solver = yices
+cpas.symbpredabs.explicit.abstraction.solver = simplify
+
+# if true, mimick the behaviour of Blast on refinement: collect all the
+# predicates from all the cuts of the abstract counterexample, and add all of
+# them to all relevant locations
+cpas.symbpredabs.refinement.useBlastWay = true
 
 # if true, don't use abstraction refinement, but read predicates from the map
 # specified below
@@ -134,10 +149,6 @@ cpas.symbpredabs.abstraction.norefinement = false
 
 # when not using refinement, where to get the list of predicates from
 #cpas.symbpredabs.abstraction.fixedPredMap = /localhome/erkan/cpa/predicates/fixedpredmap.msat
-
-# if true, split arithmetic equalities when extracting predicates from
-# interpolants
-cpas.symbpredabs.refinement.splitItpAtoms = false
 
 # if true, dump the abstraction formulas in both .msat and .smv formats
 cpas.symbpredabs.mathsat.dumpHardAbstractionQueries = false
