--- a/test/query-driven-program-testing/config/basicblock.properties
+++ b/test/query-driven-program-testing/config/basicblock.properties
@@ -3,6 +3,7 @@ analysis.useFunctionDeclarations = true
 analysis.queryDrivenProgramTesting=true
 testing.scoperestrictionautomaton=001
 testing.testgoalautomaton=003
+cpa.useSpecializedReachedSet=true
 
 # where to save the log file
 log.path = CPALog.txt
