Using cartesian instead of boolean abstraction.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/qdpt-hacking@634 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/query-driven-program-testing/config/basicblock2.properties
+++ b/test/query-driven-program-testing/config/basicblock2.properties
@@ -120,7 +120,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 cpas.symbpredabs.refinement.finalPredMapPath = /home/holzera/cpachecker/mypredmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
-cpas.symbpredabs.abstraction.cartesian = false
+cpas.symbpredabs.abstraction.cartesian = true
 
 # if true, limit the size of summary locations
 cpas.symbpredabs.smallSummaries = false
