refinement implementation finished predicate abstraction with refinement working needs more tests for predicate abstraction - there might be some efficiency issues TODO: implement refinement for lbe
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@662 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -1,6 +1,6 @@
-#Mon Dec 01 14:02:47 PST 2008
+#Fri Feb 13 17:11:40 PST 2009
 eclipse.preferences.version=1
-formatter_profile=_CPAchecker
+formatter_profile=_Erkan 'CPAchecker'
 formatter_settings_version=11
 org.eclipse.jdt.ui.exception.name=e
 org.eclipse.jdt.ui.gettersetter.use.is=true
