--- a/test/benchmarks-explicit/config/explicitAnalysis2.properties
+++ b/test/benchmarks-explicit/config/explicitAnalysis2.properties
@@ -36,6 +36,10 @@ analysis.noExternalCalls = true
 # don't use a composite CPA
 analysis.noCompositeCPA = false
 
+# use an ARTCPA (only when sep is used for merging of all elements)
+cpa.useART = true
+
+
 # where are predicates
 #predicates.path = /home/erkan/cpa/predicates/
 
