--- a/test/benchmarks-predabst/config/predabst.properties
+++ b/test/benchmarks-predabst/config/predabst.properties
@@ -1,3 +1,5 @@
+cpa.useART = true
+
 # where to save the log file
 log.path = /localhome/erkan/cpa/CPALog.txt
 
@@ -27,13 +29,13 @@ analysis.interprocedural = true
 analysis.useSummaryLocations = false
 analysis.useGlobalVars = true
 # true if we want to use block edges
-analysis.useBlockEdges = true
+analysis.useBlockEdges = false
 
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
 
 # don't use a composite CPA
-analysis.noCompositeCPA = true
+analysis.noCompositeCPA = false
 
 # remove nodes that are not reachable from the error
 cfa.removeIrrelevantForErrorLocations = true
@@ -54,7 +56,7 @@ analysis.bfs = false
 #analysis.programs = /home/alb/mathsat/cpachecker/eclipse_workspace/CPAPlugin/lib
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpa.symbpredabs.explicit.ExplicitCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.predicateabstraction.PredicateAbstractionCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
@@ -66,6 +68,8 @@ analysis.stopOperators = sep, sep
 
 # if true, don't print the set of reachable states at the end of the analysis
 analysis.dontPrintReachableStates = true
+
+cpa.useSpecializedReachedSet = true
 
 #------------------------------------------------------------------------------
 # some custom options for Symbolic Predicate Abstraction with Summaries
