--- a/test/benchmarks-lbe/config/summaryRestart.properties
+++ b/test/benchmarks-lbe/config/summaryRestart.properties
@@ -1,14 +1,14 @@
 # where to save the log file
-log.path = /localhome/erkan/cpa/CPALog.txt
+log.path = CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = off
 
 # do we want to print cfa as .dot, true or false
-dot.export = true
+dot.export = false
 
 # where to save the dot file
-dot.path = /localhome/erkan/cpa/graphs
+dot.path = .
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -24,10 +24,7 @@ cfa.combineBlockStatements = false
 
 # set to true if you want to run an interprocedural analysis
 analysis.interprocedural = true
-analysis.useSummaryLocations = false
-analysis.useGlobalVars = true
-# true if we want to use block edges
-analysis.useBlockEdges = true
+analysis.useSummaryLocations = true
 
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
@@ -35,11 +32,8 @@ analysis.noExternalCalls = true
 # don't use a composite CPA
 analysis.noCompositeCPA = true
 
-# remove nodes that are not reachable from the error
-cfa.removeIrrelevantForErrorLocations = true
-
 # where are predicates
-#predicates.path = /home/alb/mathsat/cpachecker/project
+#predicates.path = /localhome/erkan/cpa/predicates
 
 # entry function
 analysis.entryFunction = main
@@ -47,14 +41,14 @@ analysis.entryFunction = main
 # which strategy to adopt for visiting states? DFS or BFS? BFS, unless
 # bfs is false
 analysis.bfs = false
-
+analysis.restartAfterRefinement = true
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-#analysis.programs = /home/alb/mathsat/cpachecker/eclipse_workspace/CPAPlugin/lib
+#analysis.programs = /localhome/erkan/cpa/tests/Test
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpa.symbpredabs.explicit.ExplicitCPA
+analysis.cpas = cpa.symbpredabs.summary.SummaryCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
@@ -67,9 +61,16 @@ analysis.stopOperators = sep, sep
 # if true, don't print the set of reachable states at the end of the analysis
 analysis.dontPrintReachableStates = true
 
+# if true, perform a (very) simple "cone-of-influence" reduction, to get rid
+# of all the nodes and edges that are not reachable from the error locations
+cfa.removeIrrelevantForErrorLocations = true
+
 #------------------------------------------------------------------------------
 # some custom options for Symbolic Predicate Abstraction with Summaries
 #------------------------------------------------------------------------------
+
+# if true, cache queries to mathsat as much as possible
+cpas.symbpredabs.mathsat.useCache = true
 
 # if true, refinement will add all discovered predicates to all the locations
 # in the abstract trace
@@ -108,42 +109,28 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 cpas.symbpredabs.refinement.finalPredMapPath = predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
-cpas.symbpredabs.abstraction.cartesian = true
+cpas.symbpredabs.abstraction.cartesian = false
 
+# if true, limit the size of summary locations
 cpas.symbpredabs.smallSummaries = false
 
-cpas.symbpredabs.shortestCexTrace = true
-cpas.symbpredabs.shortestCexTraceUseSuffix = true
+# if true, use incremental search in counterexample analysis, to find the
+# minimal infeasible prefix
+cpas.symbpredabs.shortestCexTrace = false
 
-#cpas.symbpredabs.abstraction.norefinement = true
-# if set, will be used to initialize the predicate map
-#cpas.symbpredabs.abstraction.fixedPredMap = /home/alb/mathsat/cpachecker/fixedpredmap.msat
-#cpas.symbpredabs.abstraction.fixedPredMap = /home/alb/mathsat/cpachecker/blast_predmap.msat
+# if true, don't use abstraction refinement, but read predicates from the map
+# specified below
+cpas.symbpredabs.abstraction.norefinement = false
 
+# when not using refinement, where to get the list of predicates from
+#cpas.symbpredabs.abstraction.fixedPredMap = /localhome/erkan/cpa/predicates/fixedpredmap.msat
+
+# if true, split arithmetic equalities when extracting predicates from
+# interpolants
 cpas.symbpredabs.refinement.splitItpAtoms = false
 
-cpas.symbpredabs.mathsat.useCache = true
-
-# which SMT solver to use for computing the cartesian abstraction
-#cpas.symbpredabs.explicit.abstraction.solver = mathsat
-#cpas.symbpredabs.explicit.abstraction.solver = yices
-cpas.symbpredabs.explicit.abstraction.solver = simplify
-
-# if true, mimick the behaviour of Blast on refinement: collect all the
-# predicates from all the cuts of the abstract counterexample, and add all of
-# them to all relevant locations
-cpas.symbpredabs.refinement.useBlastWay = true
-
-# if true, apply deletion-filter to the abstract counterexample, to get a
-# minimal set of blocks, before applying interpolation-based refinement
-cpas.symbpredabs.explicit.getUsefulBlocks = true
-
-# if true, collect and print detailed statistics (at the moment, only the
-# number of abstraction steps for each location)
-#cpas.symbpredabs.explicit.extendedStats = true
-
-# if true, use incrementality in computing Cartesian abstraction
-#cpas.symbpredabs.mathsat.incremental = true
+# if true, dump the abstraction formulas in both .msat and .smv formats
+cpas.symbpredabs.mathsat.dumpHardAbstractionQueries = false
 
 # if false, don't use a combination of theories (this is incomplete)
-cpas.symbpredabs.mathsat.useDtc = true
+cpas.symbpredabs.mathsat.useDtc = false
