--- a/test/benchmarks-predabst/config/explicitAnalysis.properties
+++ b/test/benchmarks-predabst/config/explicitAnalysis.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = /localhome/erkan/cpa/CPALog.txt
+log.path = /localhome/erkan/cpa/logs/CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = off
@@ -8,11 +8,11 @@ log.level = off
 dot.export = true
 
 # where to save the dot file
-dot.path = /localhome/erkan/cpa/graphs
+dot.path = /localhome/erkan/cpa/graphs/
 
 # do we want to simplify cfa?
 cfa.simplify = false
-
+cpa.useART = true
 # run consistency checks on the cfa?
 cfa.check = true
 
@@ -27,45 +27,53 @@ analysis.interprocedural = true
 analysis.useSummaryLocations = false
 analysis.useGlobalVars = true
 # true if we want to use block edges
-analysis.useBlockEdges = true
-
+analysis.useBlockEdges = false
+analysis.useSummaryLocations = false
+analysis.useARTCPA = true
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
 
 # don't use a composite CPA
-analysis.noCompositeCPA = true
-
-# remove nodes that are not reachable from the error
-cfa.removeIrrelevantForErrorLocations = true
+analysis.noCompositeCPA = false
 
 # where are predicates
-#predicates.path = /home/alb/mathsat/cpachecker/project
+#predicates.path = /home/erkan/cpa/predicates/
 
 # entry function
 analysis.entryFunction = main
     
 # which strategy to adopt for visiting states? DFS or BFS? BFS, unless
 # bfs is false
+analysis.topSort = false
 analysis.bfs = false
 
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
-#analysis.programs = /home/alb/mathsat/cpachecker/eclipse_workspace/CPAPlugin/lib
+#analysis.programs = /home/erkan/cpa/tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpa.symbpredabs.explicit.ExplicitCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep
+analysis.mergeOperators = sep, join
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
 analysis.stopOperators = sep, sep
 
 # if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = true
+analysis.dontPrintReachableStates = false
+
+# if true, perform a (very) simple "cone-of-influence" reduction, to get rid
+# of all the nodes and edges that are not reachable from the error locations
+cfa.removeIrrelevantForErrorLocations = false
+
+# use location mapped reached set
+cpa.useSpecializedReachedSet = true
+
+explicitAnalysis.threshold = 2000
 
 #------------------------------------------------------------------------------
 # some custom options for Symbolic Predicate Abstraction with Summaries
@@ -88,7 +96,7 @@ cpas.symbpredabs.mathsat.useIntegers = false
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath = cex.msat
+cpas.symbpredabs.refinement.msatCexPath = /home/erkan/cpa/cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -105,7 +113,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = predmap.txt
+cpas.symbpredabs.refinement.finalPredMapPath = /home/erkan/cpa/predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = true
@@ -147,3 +155,4 @@ cpas.symbpredabs.explicit.getUsefulBlocks = true
 
 # if false, don't use a combination of theories (this is incomplete)
 cpas.symbpredabs.mathsat.useDtc = true
+
