updated config files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@666 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/benchmarks-predabst/config/explicitAnalysis.properties
+++ b/test/benchmarks-predabst/config/explicitAnalysis.properties
@@ -44,7 +44,7 @@ analysis.entryFunction = main
     
 # which strategy to adopt for visiting states? DFS or BFS? BFS, unless
 # bfs is false
-analysis.topSort = false
+analysis.topSort = true
 analysis.bfs = false
 
 # where to keep the programs to run, this is the workspacedata if
