test case configuration
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@691 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/benchmarks-lbe/config/explicit.properties
+++ b/test/benchmarks-lbe/config/explicit.properties
@@ -1,14 +1,14 @@
 # where to save the log file
-log.path = /localhome/erkan/cpa/CPALog.txt
+log.path = CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
-log.level = off
+log.level = on
 
 # do we want to print cfa as .dot, true or false
 dot.export = true
 
 # where to save the dot file
-dot.path = /localhome/erkan/cpa/graphs
+dot.path = graphs
 
 # do we want to simplify cfa?
 cfa.simplify = false
