--- a/test/benchmarks-lbe/config/summaryCPA.properties
+++ b/test/benchmarks-lbe/config/summaryCPA.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = /localhome/erkan/cpa/logs/SummaryCPALog.txt
+log.path = CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = off
@@ -8,7 +8,7 @@ log.level = off
 dot.export = false
 
 # where to save the dot file
-dot.path = /localhome/erkan/cpa/graphs/
+dot.path = graphs/
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -110,7 +110,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = /localhome/erkan/cpa/mypredmap.txt
+cpas.symbpredabs.refinement.finalPredMapPath = mypredmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = false
