--- a/test/pointerAnalysis.properties
+++ b/test/pointerAnalysis.properties
@@ -53,15 +53,15 @@ analysis.bfs = false
 #analysis.programs = /home/erkan/cpa/tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-analysis.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.pointeranalysis.PointerAnalysisCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.pointeranalysis.PointerAnalysisCPA, cpa.errorlocation.ErrorLocationCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, join, sep, sep
+analysis.mergeOperators = sep, join, sep, sep, ignored
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, join, sep, sep
+analysis.stopOperators = sep, join, sep, sep, ignored
 
 # if true, don't print the set of reachable states at the end of the analysis
 analysis.dontPrintReachableStates = false
