refactored main class so it's much cleaner (CPAPlugin was not tested but should work) add possibility to use ART CPA without refinement (e.g. to dump ART after analysis) removed configuration option "cpa.useART" and replaced it with "analysis.useART" and "analysis.useRefinement" (SO UPDATE YOUR CONFIGURATION FILES!) introduced configuration options "reachedPath.export" and "reachedPath.file" for ART export updated Readme with list of configurations options (PLEASE ADJUST IF YOU ADD NEW OPTIONS) updated summaryCPA.properties file so it contains a working configuration for new LBE implementation
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@704 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/benchmarks-lbe/config/summaryCPA.properties
+++ b/test/benchmarks-lbe/config/summaryCPA.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = CPALog.txt
+log.path = test/output/CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = off
@@ -8,10 +8,17 @@ log.level = off
 dot.export = false
 
 # where to save the dot file
-dot.path = graphs/
+dot.path = test/output/
+
+# export ART as graph? (only if analysis.useART == true)
+reachedPath.export = false
+reachedPath.file = test/output/path.dot
 
 # do we want to simplify cfa?
 cfa.simplify = false
+
+# run consistency checks on the cfa?
+cfa.check = true
 
 # do we want to combine multiple assignments and 
 # if cpa.simplify is set to true and cfa.combineBlockStatements is set
@@ -19,12 +26,18 @@ cfa.simplify = false
 
 cfa.combineBlockStatements = false
 
+# use ART CPA (needed for refinement)
+analysis.useART = true
+analysis.useRefinement = true
+
+# use CBMC to check counter examples (needs cbmc installed in path)
+analysis.useCBMC = false
+
 # use global variables?
 analysis.useGlobalVars = true
-#analysis.useBlockEdges = true
+
 # set to true if you want to run an interprocedural analysis
 analysis.interprocedural = true
-analysis.useSummaryLocations = false
 
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
@@ -93,7 +106,7 @@ cpas.symbpredabs.mathsat.useIntegers = false
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath = cex.msat
+cpas.symbpredabs.refinement.msatCexPath = test/output/cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -110,7 +123,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = mypredmap.txt
+cpas.symbpredabs.refinement.finalPredMapPath = test/output/predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = false
