summaryCPA.properties config file
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@710 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/benchmarks-predabst/config/summaryCPA.properties
+++ b/test/benchmarks-predabst/config/summaryCPA.properties
@@ -1,4 +1,6 @@
 cpa.useART = true
+analysis.useART = true
+analysis.useRefinement = true
 
 # where to save the log file
 log.path = /localhome/erkan/cpa/logs/CPALog.txt
@@ -7,7 +9,7 @@ log.path = /localhome/erkan/cpa/logs/CPALog.txt
 log.level = off
 
 # do we want to print cfa as .dot, true or false
-dot.export = true
+dot.export = false
 
 # where to save the dot file
 dot.path = /localhome/erkan/cpa/graphs/
@@ -16,7 +18,7 @@ dot.path = /localhome/erkan/cpa/graphs/
 cfa.simplify = false
 
 # run consistency checks on the cfa?
-cfa.check = true
+cfa.check = false
 
 # do we want to combine multiple assignments and 
 # if cpa.simplify is set to true and cfa.combineBlockStatements is set
