handle forward declarations like "struct a;" in TypesCPA
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@719 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/types.properties
+++ b/test/types.properties
@@ -1,5 +1,5 @@
 # where to save the log file
-log.path = test/CPALog.txt
+log.path = test/output/CPALog.txt
 
 # set the log level, only on, off supported currently to switch on or off
 log.level = off
@@ -8,7 +8,9 @@ log.level = off
 dot.export = true
 
 # where to save the dot file
-dot.path = test/graph/
+dot.path = test/output/
+
+parser.dialect = GNUC
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -16,19 +18,9 @@ cfa.simplify = false
 # run consistency checks on the cfa?
 cfa.check = true
 
-# do we want to combine multiple assignments and 
-# if cpa.simplify is set to true and cfa.combineBlockStatements is set
-# to false only blank edges will be removed while simplfying
-
-cfa.combineBlockStatements = false
-
 # set to true if you want to run an interprocedural analysis
 analysis.interprocedural = true
-analysis.useSummaryLocations = false
 analysis.useGlobalVars = true
-# true if we want to use block edges
-analysis.useBlockEdges = false
-analysis.useSummaryLocations = false
 
 # create CFA edges for function declarations
 analysis.useFunctionDeclarations = true
