moving StubCodeReaderFactory classes to JAR file so compiler error is removed hope I added the JAR file everywhere it's needed (build path etc.)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@727 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="lib/mathsat.jar"/>
 	<classpathentry kind="lib" path="lib/javabdd-1.0b2.jar"/>
 	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
+	<classpathentry kind="lib" path="lib/StubCodeReaderFactory.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
