--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ bin.includes = plugin.xml,\
                build.properties,\
                lib/javabdd-1.0b2.jar,\
                lib/mathsat.jar,\
+               lib/StubCodeReaderFactory.jar,\
                bin/,\
                lib/,\
                .
